Modal height fixed

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,25 +1,25 @@
 .modal::backdrop {
-    background: hsl(0 0% 0% / 50%);
-  }
-  
-  .modal {
-    max-width: 80rem;
-    padding: 2rem;
-    border: 0;
-    border-radius: 0.5rem;
-    position: relative;
-    border-radius: 1rem;
-    position: fixed;
-    box-shadow: hsl(0 0% 0% / 10%) 0 0 0.5rem 0.25rem;
-    border: 1px solid #ccc;
-  }
-  
-  .modal-close-btn {
-    font-size: 0.75em;
-    position: absolute;
-    top: 0.35em;
-    right: 0.45em;
-    border: none;
-    background-color: unset
-  }
-  
+  background: hsl(0 0% 0% / 50%);
+}
+
+.modal {
+  max-width: 80rem;
+  max-height: 600px;
+  padding: 2rem;
+  border: 0;
+  border-radius: 0.5rem;
+  position: relative;
+  border-radius: 1rem;
+  position: fixed;
+  box-shadow: hsl(0 0% 0% / 10%) 0 0 0.5rem 0.25rem;
+  border: 1px solid #ccc;
+}
+
+.modal-close-btn {
+  font-size: 0.75em;
+  position: absolute;
+  top: 0.35em;
+  right: 0.45em;
+  border: none;
+  background-color: unset;
+}
