--- a/src/Home/Header/Header.css
+++ b/src/Home/Header/Header.css
@@ -5,9 +5,8 @@
 }
 
 /* Style the links inside the navigation bar */
-.topnav button {
+.topnav a {
   float: left;
-  background-color: #0d6efd;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -17,14 +16,14 @@
 }
 
 /* Change the color of links on hover */
-.topnav button:hover {
+.topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav button.active {
-  background-color: #333;
+.topnav a.active {
+  background-color: #0d6efd;
   color: white;
 }
 
@@ -58,7 +57,7 @@
   z-index: 1;
 }
 
-.dropdown-content button {
+.dropdown-content a {
   float: none;
   color: black;
   padding: 12px 16px;
@@ -67,7 +66,7 @@
   text-align: left;
 }
 
-.dropdown-content button:hover {
+.dropdown-content a:hover {
   background-color: #ddd;
 }
 
